Another attempt to prevent any elements from overflowing the feed.

--- a/skim/static/skim.css
+++ b/skim/static/skim.css
@@ -153,9 +153,12 @@ article>.article-body {
     line-height: 1.33em;
 }
 
+.article-body * {
+    max-width: 100% !important;
+}
+
 .article-body img,
 .article-body iframe {
-    max-width: 100% !important;
     height: auto !important;
 }
 
